# Watify

./: .gitattributes  .gitignore  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/app/: auth_lockout.py  auth_middleware.py  auth_repo.py  constants.py  csrf_middleware.py  db.py  jwt_tokens.py  logging_setup.py  main.py  models.py  scheduler.py  sender.py  session_crypto.py  settings.py  whatsapp.py
backend/app/routers/: auth.py  jobs.py  whatsapp.py
backend/scripts/: pair.py  smoke_auth.py  smoke_crypto.py
docs/: PRD.md  SECURITY.md
docs/.support/: PIPELINE.md  PLAN.md  REQUIREMENTS.md
docs/.support/conversations/: 2026-05-18T151813Z-frontend_agent-iter5.md  2026-05-18T154122Z-frontend_agent-iter9.md  2026-05-18T155609Z-backend_agent-iter12.md  2026-05-18T160023Z-frontend_agent-iter13.md  2026-05-18T161014Z-backend_agent-iter15.md  2026-05-18T163901Z-resolving_agent-iter21.md  2026-05-18T164340Z-verification_agent-iter22.md  2026-05-18T164836Z-resolving_agent-iter23.md  2026-05-18T165312Z-verification_agent-iter24.md  2026-05-18T165759Z-resolving_agent-iter25.md  2026-05-18T170244Z-verification_agent-iter26.md  2026-05-18T172925Z-ticketing_agent-iter32.md  2026-05-18T173556Z-resolving_agent-iter33.md  2026-05-18T174134Z-resolving_agent-iter34.md  2026-05-18T174728Z-resolving_agent-iter36.md  2026-05-18T175126Z-verification_agent-iter37.md  2026-05-18T175644Z-resolving_agent-iter38.md  (+36 more)
frontend/: package-lock.json  package.json
install/: install.sh  update.sh
scripts/: dev-backend.ps1  dev-frontend.ps1  pair.ps1
(+58 files in other folders)
