[project]
name = "watify-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "tzlocal>=5.3.1",
    "uvicorn[standard]>=0.47.0",
    "wars>=0.1.3",
]
