[project]
name = "watify-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "argon2-cffi>=25.1.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.38",
    "tzlocal>=5.3.1",
    "uvicorn[standard]>=0.47.0",
    "wars>=0.1.3",
]
